<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <!-- business logo -->
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/shaiicodez" />

    <!-- About Info -->
    <LinearLayout
        android:id="@+id/layout_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/hello_this_is"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_extrabold"
                android:text="@string/shaiicodez"
                android:textColor="@color/white"
                android:textSize="28sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/tech_ser_blog"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- details -->
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tv_copy_rights"
        android:layout_below="@id/layout_about">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_extrabold"
                android:paddingHorizontal="16dp"
                android:paddingBottom="16dp"
                android:text="@string/what_we_offer"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/specialized_tech_mentoring_and_consultation_services_a_complete_cse_guide_for_beginners"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_extrabold"
                android:paddingHorizontal="16dp"
                android:paddingBottom="10dp"
                android:text="@string/what_s_included"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/details_services"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_extrabold"
                android:paddingHorizontal="16dp"
                android:paddingTop="20dp"
                android:paddingBottom="16dp"
                android:text="@string/business_details"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/remote"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_baseline_my_location_24"
                app:drawableTint="@color/purple_700" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/_24_7"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_baseline_access_time_24"
                app:drawableTint="@color/purple_700" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/www_shaiicodez_com"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_baseline_link_24"
                app:drawableTint="@color/purple_700" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_copy_rights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/_2021_shaiicodez_all_rights_reserved"
        android:textAlignment="center"
        android:textColor="@color/teal_700" />
</RelativeLayout>